Tidying up layout

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
         <!--Game Input Dispaly and Results Display-->
         <div class="gameArea">
-            <div class="dispalyArea">
+            <div class="displayArea">
                 <span id="displayInput">0000</span>
-                <span id="dispalyResult">CODE</span>
+                <span id="dispalyResult">----</span>
             </div>
 
             <!--Keypad-->
@@ -66,13 +66,7 @@
                     <li></li>
                     <li></li>
                     <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                                       
+                    <li></li>                                       
                 </ol>
             </div>
 
