--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <!--Game Input Dispaly and Results Display-->
         <div class="gameArea">
             <div class="displayArea">
-                <span id="displayInput">0000</span>
-                <span id="dispalyResult">----</span>
+                <input type="text" readonly class="displayInput">
+                <input type="text" readonly class="dispalyResult">
             </div>
 
             <!--Keypad-->
@@ -45,7 +45,7 @@
                 <div class="inputKey">8</div>
                 <div class="inputKey">9</div><br>
                 <div class="inputKey material-icons">backspace</div>
-                <div class="inputKey">0</div>
+                <div class="inputKey material-icons">exposure_zero</div>
                 <div class="inputKey material-icons">done</div>
             </div>
 
@@ -66,7 +66,12 @@
                     <li></li>
                     <li></li>
                     <li></li>
-                    <li></li>                                       
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>                                         
                 </ol>
             </div>
 
