Begining ReadME.MD

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 
             <!--Buttons for Hint an Rules -->
 
+            <button data-type="submit" class="story">STORY</button>
             <button data-type="submit" class="rules">RULES</button>
             <button data-type="submit" class="hint">HINT</button>
 
