--- a/index.html
+++ b/index.html
@@ -77,16 +77,20 @@
 
             <!--Buttons for Hint an Rules -->
 
+            <div class="buttonsContainer">
+
             <button data-type="submit" class="story">STORY</button>
             <button data-type="submit" class="rules">RULES</button>
             <button data-type="submit" class="hint">HINT</button>
-
+            
+            </div>
+                        
         </div>
     </div>
 
 
 
-
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
