--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- font awesome and google fonts -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+   
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -28,7 +27,7 @@
         <!--Game Input Dispaly and Results Display-->
         <div class="gameArea">
             <div class="displayArea">
-                <input type="text" readonly class="displayInput">
+                <input type="text" readonly id="displayInput" value = "0000">
                 <input type="text" readonly class="dispalyResult">
             </div>
 
@@ -82,7 +81,7 @@
             <button data-type="submit" class="story">STORY</button>
             <button data-type="submit" class="rules">RULES</button>
             <button data-type="submit" class="hint">HINT</button>
-            
+
             </div>
                         
         </div>
@@ -90,7 +89,7 @@
 
 
 
-    <script src="./assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
