--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
         <!--Game Input Dispaly and Results Display-->
         <div class="gameArea">
             <div class="displayArea">
-                <input type="text" readonly id="displayInput" value = "0000">
+                <input type="text" readonly class="displayInput" id="input1" value = "0">
+                <input type="text" readonly class="displayInput" id="input2" value = "0">
+                <input type="text" readonly class="displayInput" id="input3" value = "0">
+                <input type="text" readonly class="displayInput" id="input4" value = "0">
                 <input type="text" readonly class="dispalyResult">
             </div>
 
