resetDisplay function complete

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <input type="text" readonly class="displayInput" id="input2" value = "0">
                 <input type="text" readonly class="displayInput" id="input3" value = "0">
                 <input type="text" readonly class="displayInput" id="input4" value = "0">
-                <input type="text" readonly class="dispalyResult">
+                <input type="text" readonly id="displayResult">
             </div>
 
             <!--Keypad-->
@@ -46,7 +46,7 @@
                 <div class="inputKey">7</div>
                 <div class="inputKey">8</div>
                 <div class="inputKey">9</div><br>
-                <div class="inputKey material-icons">backspace</div>
+                <div class="inputKey material-icons">restart_alt</div>
                 <div class="inputKey material-icons">exposure_zero</div>
                 <div class="inputKey material-icons">done</div>
             </div>
