Broke Result Display into 4 and styled

--- a/index.html
+++ b/index.html
@@ -26,12 +26,17 @@
 
         <!--Game Input Dispaly and Results Display-->
         <div class="gameArea">
-            <div class="displayArea">
+            <div class="displayGuessArea">
                 <input type="text" readonly class="displayInput" id="input1" value = "0">
                 <input type="text" readonly class="displayInput" id="input2" value = "0">
                 <input type="text" readonly class="displayInput" id="input3" value = "0">
-                <input type="text" readonly class="displayInput" id="input4" value = "0">
-                <input type="text" readonly id="displayResult">
+                <input type="text" readonly class="displayInput" id="input4" value = "0">                
+            </div>
+            <div class= "displayResultArea">
+                <input type="text" readonly class="displayResult" id="result1" value = " ">
+                <input type="text" readonly class="displayResult" id="result1" value = " ">
+                <input type="text" readonly class="displayResult" id="result1" value = " ">
+                <input type="text" readonly class="displayResult" id="result1" value = " ">                
             </div>
 
             <!--Keypad-->
