Added Levels and Tries Left

--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
     <!--Header for Game and Level Number-->
 
     <div class="game">
+        <p id="title">ESCAPE</p>
         <div class="header">
-            <h1>ESCAPE</h1>
-            <span id="levelDispaly">
-                <p id="level" value="Level 1">Level 1</p>
-                <p id="triesLeft">Tries Left</p>
-            </span>
+            
+            <div id="levelDispaly">
+                <p id="level" value="Level 1"></p>
+            </div>
+            <div>    
+                <p id="triesLeftText">Tries Left: </p>
+            </div>
+            <div id="triesLeftDisplay">    
+                <p id="triesLeft"></p>
+            </div>
         </div>
 
         <!--Game Input Dispaly and Results Display-->
