Added Levels and Tries Left

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="header">
             
             <div id="levelDispaly">
-                <p id="level" value="Level 1"></p>
+                <p id="level"></p>
             </div>
             <div>    
                 <p id="triesLeftText">Tries Left: </p>
