Tries left count down and level up function began

--- a/index.html
+++ b/index.html
@@ -21,19 +21,20 @@
     <div class="game">
         <p id="title">ESCAPE</p>
         <div class="header">
-            
+
             <div id="levelDispaly">
                 <p id="level"></p>
             </div>
-            <div>    
+            <div>
                 <p id="triesLeftText">Tries Left: </p>
             </div>
-            <div id="triesLeftDisplay">    
+            <div id="triesLeftDisplay">
                 <p id="triesLeft"></p>
             </div>
         </div>
 
         <!--Game Input Dispaly and Results Display-->
+
         <div class="gameArea">
             <div class="displayGuessArea">
                 <input type="text" readonly class="displayInput" id="input1" value="0">
@@ -72,20 +73,17 @@
                 </ol>
             </div>
 
-            <!--Buttons for Hint an Rules -->
+            <!--Buttons for Story and Rules -->
 
             <div class="buttonsContainer">
 
                 <button data-type="submit" class="story">STORY</button>
                 <button data-type="submit" class="rules">RULES</button>
-                <button data-type="submit" class="hint">HINT</button>
 
             </div>
 
         </div>
     </div>
-
-
 
     <script src="assets/js/script.js"></script>
 </body>
