Updated Story, Rules page and responise stryling

--- a/rules.html
+++ b/rules.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
     <html lang="en">
 
     <head>
@@ -16,11 +16,14 @@
 
     <body>
         <div class="game">
-            <p id="title">ESCAPE</p>
+            <div id="imageComtainer">
+                <img src="./assets/images/Escape-sm.jpg" alt="Escape">
+            </div>
+    
 
             <ol id="rules">
                 <li>You must only enter 4 digits and click check mark</li>
-                <li>You will be show in the adjacent display box which digits are right and if in correct place.</li>
+                <li>You will be shown in the below display boxes which digits are right and if in the correct place.</li>
                 <li>For a correct digit in correct place you will get a C</li>
                 <li>For a correct digit in the wrong place you will get a X</li>
                 <li>For a bad digit whic is nor in code you will get B.</li>
