--- a/story.html
+++ b/story.html
@@ -19,13 +19,27 @@
     <!--Header for Game and Tries Number-->
 
     <div class="game">
-        <p id="title">ESCAPE</p>
+        <div id="imageComtainer">
+            <img src="./assets/images/Escape-sm.jpg" alt="Escape">
+        </div>
+
         <br>
-        <p id="story">You are a prisoner in a max security prison which 3 layers to get to freedom. However, the guards are very
-            forgetful and need help remembering the 4-digit pin of each keypad. You are in the first inner layer where
-            you encounter a keypad door, the first of 3. As you get closer to freedom the number of wrong guesses
-            decreases. Best of Luck.
-        </p>
+        <div id="story">
+        <h1>The Back Story</h1>
+        <br>
+        <p >You are a prisoner wrongfully convicted by a corrupt government.  A fall guy to protect more powerful people.</p>
+        <br>
+        <p>The government has been infiltrated by Reptile People at the highest levels and you have been locked up to keep your silence. </p>
+        <br>
+        <p>The Reptile people plan to release a toxic gas to kill all humans so the clock is ticking and you are the only one who knows how to stop all this.</p>
+        <br>
+        <p>You find yourself in a corridor with a keypad door.  Beyond this door is freedom and saving the world.</p>
+        <br>
+        <p>All you have to do is crack the code.  No pressure the fate of the world depends on you.</p>
+        <br>
+        <p>Good Luck,  we need you !</p>
+        <br>
+        </div>  
 
         <!--Buttons for Story and Rules -->
 
